# repolens

./: .dockerignore  .gitignore  .repolens.example.toml  .repolens.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  RELEASE.md  TODO.md  action.yml  build.rs  deny.toml  docker-compose.yml  repolens-report.md  tarpaulin.toml
.claude/: README.md  audit-agent.md  dev-agent.md  qa-agent.md  release-agent.md  security-agent.md
.claude/commands/: audit.md  fix.md  pr-review.md  release.md  security.md  update-doc.md
.cursor/rules/: commit-messages.mdc
.github/: quality-gates.example.toml  quality-gates.toml
.github/scripts/: check-quality-gates.sh  check_and_create_issues.py  close_duplicates.py  create_issues.py  create_issues.sh  create_issues_robust.py  create_labels.py
.github/workflows/: README.md  ci.yml  code-quality.yml  create-release.yml  docker.yml  (+3 more)
benches/: parse_benchmark.rs  rules_benchmark.rs  scanner_benchmark.rs
coverage/: tarpaulin-report.html  tarpaulin-report.json
docs/: CODE_QUALITY_ANALYSIS.md  QUALITY_GATES.md  QUALITY_GATES_SUMMARY.md  ci-cd-integration.md  docker.md  installation.md
presets/: enterprise.toml  opensource.toml  strict.toml
schemas/: README.md  audit-report.schema.json
scripts/: check-quality-gates.rs  check-quality-gates.sh  generate-changelog.sh  install-hooks.sh  install.sh  release.sh  uninstall.sh
src/: error.rs  lib.rs  main.rs
templates/: CONTRIBUTING.md
tests/: e2e_test.rs  integration_test.rs  providers_test.rs  regression_test.rs  security_test.rs  utils_test.rs
wiki/: Architecture.md  Bonnes-pratiques.md  Categories-de-regles.md  Changelog-Automatique.md  Configuration.md  Contribution.md  Custom-Rules.md  Developpement.md  Guide-d-utilisation.md  Home.md  Installation.md  Presets.md  README.md
(+87 files in other folders)
